--- a/index.html
+++ b/index.html
@@ -9,13 +9,138 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
 
-    <title>Doomsday Date Calculator</title>
+    <link rel="stylesheet" href="assets/style.css">
+    <title id="pageTitle">Doomsday Rule</title>
   </head>
   <body>
-    <main class="container p-5">
-
+    <main class="container my-3">
         <div class="jumbotron">
-            <h2>Doomsday Rule Calculator</h2>
+            <div class="row">
+                <div class="col-9">
+                    <h2 class="lang-ge" style="margin-top:-20px">
+                        განკითხვის დღის წესი
+                    </h2>
+                    <h2 class="lang-en" style="margin-top:-20px">
+                        Doomsday Rule
+                    </h2>
+                    <small id="enSwitch" onclick="switchLang('en')" class="text-muted">eng</small>
+                    <small class="text-muted">|</small>
+                    <small id="geSwitch" onclick="switchLang('ge')" class="text-muted">geo</small>
+                    <p>
+                        განკითხვის დღის წესი წარმოადგენს ალგორითმს რომლის გამოყენებით შეგვიძლია გამოვთვალოთ,
+                        თუ კვირის რა დღე იყო ნებისმიერი თარიღი. ალგორითმი მათემატიკოსმა ჯონ კონვეიმ (1937 - 2020) შეიმუშავა 1973 წელს.
+                        ის ეფუძვნება დაკვირვებას, რომლის მიხედვითაც ყოველ წელს არის კვირის ერთი დღე, 'განკითხვის დღე',
+                        რომელიც ადვიდად დასამახსოვრებელ თარიღებს ემთხვევა (თებერვლის ბოლო რიცხვი, 4/4, 6/6, 8/8, 10/10, 12/12 ა.შ)
+                    </p>
+                    <p>                    
+                        ალგორითმი რამდენიმე საფეხურისგან შედგება:
+                    </p>
+                    <ol>
+                        <li>საუკუნის ფუძე-დღის დადგენა</li>
+                        <li>წლის განკითხვის დღის გამოთვლა საუკუნის ფუძე-დღეზე დაყრდნობით</li>
+                        <li>განკითხვის ადვილად დასამახსოვრებელი დღეებიდან უახლოესის შერჩევა და სასურველ თარიღამდე გადათვლა</li>
+                    </ol>
+                </div>
+                <div class="col-3">
+                    <img src="assets/conway-min.png" alt="" class="img-fluid pb-2" style="margin-top:-40px;">
+                </div>
+            </div>
+            <div class="mt-2">                
+                <p>
+                    1. საუკუნის ფუძის დასადგენად შეგვიძლია დავიმახსოვროთ
+                    რომ გრეგორიანულ კალენდრის ციკლი ყოველ 4 საუკუნეში მეორდება.
+                    I საუკუნის ფუძე-დღეა სამშაბათი, II - კვირა, III პარასკევი, IV - ოთხშაბათი,
+                    მეხუთე საუკუნიდან ციკლი ახლიდან იწყება.
+                </p>
+                <p>
+                    თუმცა ყოველ ჯერზე პირველი საუკუნიდან რომ არ ვითვალოთ უფრო მარტივია დავიმახსოვროთ შემდეგი წლებისთვის:
+                </p>
+                <ul>
+                    <li>1800-1899 პარასკევი</li>
+                    <li>1900-1999 ოთხშაბათი</li>
+                    <li>2000-2099 სამშაბათი</li>
+                    <li>2100-2199 კვირა</li>
+                </ul>
+                <small class="form-text text-muted">*მოსახერხებელია რომ საუკუნედ 00-დან 99-ს ჩათვლით წლები მივიჩნიოთ</small>
+            </div>
+            <div class="mt-3">
+                <p>
+                    2. წლის განკითხვის დღის საპოვნელად შემდეგი გამოთვლები უნდა ჩავატაროთ:
+                </p>
+                <ol>
+                    <li>ავიღოთ წლის ბოლო ორი ციფით შედგენილი რიცხვი (Y)</li>
+                    <li>Y გავყოთ 12-ზე, მივიღებთ მთელ ნაწილს (A) და ნაშთს (B)</li>
+                    <li>ნაშთი (B) გავყოთ 4-ზე და დავიმახსოვროთ განაყოფის მთელი ნაწილი (C)</li>
+                    <li>გამოვთვალოთ (A+B+C)-ს 7-ზე გაყოფით მიღებული ნაშთი (D)</li>
+                    <li>გადავთვალოთ D დღე საუკუნის ფუძე-დღიდან</li>
+                </ol>
+                <p>
+                    შენიშვნა: 2010 წელს ჩემბერლეინ ფონგმა და მაიკლ უოლტერსმა წლის განკითხვის დღის უფრო სწრაფი მეთოდი იპოვეს,
+                    რომელსაც "კენტი + 11" უწოდეს. თუ გსურთ მასაც გაეცნოთ დააჭირეთ
+                    <a data-toggle="collapse" href="#odd11" role="button">
+                        აქ
+                    </a>
+                </p>
+                <div class="collapse" id="odd11">
+                    <div class="card card-body">
+                        <ol>
+                            <li>ავიღოთ წლის ბოლო ორი ციფით შედგენილი რიცხვი (T)</li>
+                            <li>თუ T კენტია დავუმატოთ 11</li>
+                            <li>T გავანახევროთ (T = T / 2)</li>
+                            <li>თუ T კენტია დავუმატოთ 11</li>
+                            <li>7-ს გამოვაკლოთ T-ს 7-ზე გაყოფისას მიღებული ნაშთი T = 7 − (T mod 7).</li>
+                            <li>გადავთვალოთ T დღე საუკუნის ფუძე-დღიდან</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+            <div class="mt-3">
+                3. მოგვიწევს შემდეგი დღეების დამახსოვრება, თანაც კონოვეის "9-5 at 7-11" მნემონიკის გარეშე,
+                რომელიც ქართული რეალობისთვის არაა რელევანტური.
+                <table class="table table-bordered text-center">
+                    <thead>
+                      <tr>
+                        <th>იან</th>
+                        <th>თებ</th>
+                        <th>მარ</th>
+                        <th>აპრ</th>
+                        <th>მაი</th>
+                        <th>ივნ</th>
+                        <th>ივლ</th>
+                        <th>აგვ</th>
+                        <th>სექ</th>
+                        <th>ოქტ</th>
+                        <th>ნოე</th>
+                        <th>დეკ</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>3/1 ან 4/1</td>
+                        <td>28/2 ამ 29/2</td>
+                        <td>0/3</td>
+                        <td>4/4</td>
+                        <td>9/5</td>
+                        <td>6/6</td>
+                        <td>11/7</td>
+                        <td>8/8</td>
+                        <td>5/9</td>
+                        <td>10/10</td>
+                        <td>7/11</td>
+                        <td>12/12</td>
+                      </tr>
+                    </tbody>
+                </table>
+                <small class="form-text text-muted">*იანვრის და თებერვლის შემთხვევაში 3 და 28 არანაკიან წელს, ხოლო 4 და 29 ნაკიან წელს იქნება განკითხვის დღე</small>
+                <small class="form-text text-muted">**მარტის განკითხვის დღედაც თებერვლის ბოლო დღეს ანუ ნოლ მარტს ვიყენებთ</small>
+                <p class="mt-2">
+                    შემდეგ უბრალოდ გადავთვლით სასურველ რიცხვს უახლოესი განკითხვის დღიდან და მივიღებთ თუ კვირის რა დღე იყო ჩაფიქრებული თარიღი.
+                    ვინაიდან 7 დღეში კვირის დღეების ათვლა ახლიდან იწყება, საქმის უფრო გასამარტივებლად შეგვიძლია სასურველი რიცხვს გამოვაკლოთ განკითხვის დღე,
+                    გავყოთ 7-ზე და მიღებული ნაშთი ავითვალოთ.
+                </p>
+                <small class="form-text text-muted">მაგ. 15 აპრილისთვის გამოვთვლით (15 - 4) / 7 = 2 + 1 და განკითხვის დღიდან მხოლოდ 1 დღის ათვლა მოგვიწევს</small>
+                <p class="mt-4">სავარჯიშოდ შეგიძლიათ ქვემოთ მოცემული კალკულატორი გამოიყენოთ.</p>
+            </div>
             <div class="input-group my-3">
                 <input type="text" class="form-control" id="date" placeholder="Enter date (Ex.: 1991-04-23)" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}" title="Date format: YYYY-MM-DD">
                 <div class="input-group-append">
@@ -25,6 +150,7 @@
 
             <div class="mt-3">
                 <p id="centuryDoomsday"></p>
+                <p id="yearNum"></p>
                 <p id="calculateYear"></p>
                 <p id="yearDoomsday"></p>
                 <p id="closestDoomsday"></p>
@@ -35,79 +161,9 @@
         </div>
     </main>
 
-    <script>
-        const daysOfWeek = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
-        const anchorDoomsdays = [2, 0, 5, 3];
-        // The first values are zeroed out to make month number correspond to index
-        const monthDoomsdays = [NaN, 3, 28, 0, 4, 9, 6, 11, 8, 5, 10, 7, 12]
-        const months = ['N/A', 'January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'];
-
-        const calcClosestDoomsday = (month, day, isLeapYear) => {
-            console.log(month)
-            let doomsMonth =
-                (monthDoomsdays[month] + 30 + monthDoomsdays[month+1]) / 2 < day ? month : month + 1;
-            let doomsDay = monthDoomsdays[doomsMonth]
-            if (isLeapYear && (doomsMonth === 1 || doomsMonth === 2)) doomsDay++;
-            return { month: doomsMonth, day: doomsDay };
-        }
-
-        const calcDoomsday = () => {
-            const date = document.getElementById('date').value;
-            // chack if Date.parse returned NaN
-            if (Date.parse(date) !== Date.parse(date)) {
-                document.getElementById('error').innerHTML =
-                    'Please enter a valid date';
-                document.getElementById('centuryDoomsday').innerHTML = '';
-                document.getElementById('calculateYear').innerHTML = '';
-                document.getElementById('yearDoomsday').innerHTML = '';
-                document.getElementById('closestDoomsday').innerHTML = '';
-                document.getElementById('dayOfTheWeek').innerHTML = '';
-                document.getElementById('conclusion').innerHTML = '';
-                return;
-            } else {
-                document.getElementById('error').innerHTML = '';
-            }
-            let [year, month, day] = date.split('-');
-            month = month * 1;
-            const yy = year % 100;
-            const century = ~~(year / 100);
-            const centuryDoomsday = century % 4;
-
-            document.getElementById('centuryDoomsday').innerHTML =
-                `The anchor doomsday for ${century}th century is ${daysOfWeek[centuryDoomsday]}`;
-            
-            const tmpA = ~~(yy / 12);
-            const tmpB = yy % 12;
-            const tmpC = ~~(tmpB / 4);
-            const tmpD = (tmpA + tmpB + tmpC) % 7;
-            const yearDoomsday = (centuryDoomsday + tmpD) % 7;
-
-            document.getElementById('calculateYear').innerHTML =
-                `${yy} / 12 = ${tmpA} + ${tmpB} <br>
-                ${tmpB} / 4 = ${tmpC} + remainder <br>
-                (${tmpA} + ${tmpB} + ${tmpC}) modulo 7 = ${tmpD} <br>`;
-
-            document.getElementById('yearDoomsday').innerHTML =
-                `The year doomsday for ${year} is ${tmpD} days from century doomsday,
-                so it is: ${daysOfWeek[yearDoomsday]}`;
-
-            const isLeapYear = year % 4 == 0;
-
-            const closestDoomsday = calcClosestDoomsday(month, day, isLeapYear);
-            console.log(closestDoomsday)
-
-            document.getElementById('closestDoomsday').innerHTML =
-                `${months[month]} ${day} is closest to doomsday date ${months[closestDoomsday.month]} ${closestDoomsday.day}`;
-
-            const dayOfTheWeek = (yearDoomsday + (day - closestDoomsday.day) % 7) % 7;
-            console.log(dayOfTheWeek)
-            document.getElementById('dayOfTheWeek').innerHTML =
-                `So it is ${day - closestDoomsday.day} days away from the nearest doomsday,
-                which makes it ${daysOfWeek[dayOfTheWeek]}`;
-
-            document.getElementById('conclusion').innerHTML =
-                `${months[month]} ${day}, ${year} was a ${daysOfWeek[dayOfTheWeek]}`;
-        }
-    </script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="assets/script.js"></script>
   </body>
 </html>
