--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/bootstrap.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/style.css">
-    <title id="pageTitle">Doomsday Rule</title>
+    <title id="pageTitle">Doomsday Rule | განკითხვის დღის წესი</title>
   </head>
   <body>
     <main class="container my-3">
