--- a/index.html
+++ b/index.html
@@ -261,10 +261,10 @@
             <div class="input-group my-3">
                 <input type="text" class="form-control" id="date" onenter="calcDoomsday()" placeholder="Enter date (Ex.: 1991-04-23)" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}" title="Date format: YYYY-MM-DD">
                 <div class="input-group-append">
-                    <button class="btn btn-primary" onclick="calcDoomsday()">Calculate</button>
+                    <button id="btnCalculate" class="btn btn-primary" onclick="calcDoomsday()">Calculate</button>
                 </div>
                 <div class="input-group-append">
-                    <button class="btn btn-warning" onclick="randomDate()">Random</button>
+                    <button id="btnRandom" class="btn btn-warning" onclick="randomDate()">Random</button>
                 </div>
             </div>
 
