--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <meta name="og:title" content="Doomsday Rule | განკითხვის დღის წესი"/>
     <meta name="og:image" content="assets/conway-min.png"/>
-    <meta name="description" content="John Horton Conway's Doomsday Rule calculator | ჯონ ჰორტონ კონვეის განკითხვის დღის კალკულატორი">
+    <meta name="description" content="John Horton Conway's Doomsday Rule calculator | ჯონ ჰორტონ კონვეის განკითხვის დღის წესი ნებისმიერი თარიღისთვის კვირის დღის საპოვნელად">
     <meta name="keywords" content="John Horton Conway, Doomsday Rule, Day of the Week, Calculator, ჯონ ჰორტონ კონვეი, მათემატიკა, განკითხვის დღის წესი, კვირის დღის გამოთვლა">
     <meta name="author" content="Amiran Ramishvili">
     <meta name="project-url" content="https://github.com/darkmark1991/doomsday-calculator">
@@ -30,9 +30,9 @@
                     <h2 class="lang-en" style="margin-top:-20px">
                         Doomsday Rule
                     </h2>
-                    <small id="enSwitch" onclick="switchLang('en')" class="hover-hand text-muted">eng</small>
-                    <small class="text-muted">|</small>
                     <small id="geSwitch" onclick="switchLang('ge')" class="hover-hand text-muted">geo</small>
+                    <small class="text-muted">|</small>
+                    <small id="enSwitch" onclick="switchLang('en')" class="hover-hand text-muted">eng</small>
                     <div class="lang-ge">
                         <p>
                             განკითხვის დღის წესი წარმოადგენს ალგორითმს რომლის გამოყენებით შეგვიძლია გამოვთვალოთ,
