--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    <meta name="og:title" content="Doomsday Rule | განკითხვის დღის წესი"/>
-    <meta name="og:image" content="assets/conway-min.png"/>
-    <meta name="description" content="John Horton Conway's Doomsday Rule calculator | ჯონ ჰორტონ კონვეის განკითხვის დღის წესი ნებისმიერი თარიღისთვის კვირის დღის საპოვნელად">
-    <meta name="keywords" content="John Horton Conway, Doomsday Rule, Day of the Week, Calculator, ჯონ ჰორტონ კონვეი, მათემატიკა, განკითხვის დღის წესი, კვირის დღის გამოთვლა">
-    <meta name="author" content="Amiran Ramishvili">
-    <meta name="project-url" content="https://github.com/darkmark1991/doomsday-calculator">
+    <meta property="og:title" content="Doomsday Rule | განკითხვის დღის წესი"/>
+    <meta property="og:image" content="assets/conway-min.png"/>
+    <meta property="description" content="John Horton Conway's Doomsday Rule calculator | ჯონ ჰორტონ კონვეის განკითხვის დღის წესი ნებისმიერი თარიღისთვის კვირის დღის საპოვნელად">
+    <meta property="keywords" content="John Horton Conway, Doomsday Rule, Day of the Week, Calculator, ჯონ ჰორტონ კონვეი, მათემატიკა, განკითხვის დღის წესი, კვირის დღის გამოთვლა">
+    <meta property="author" content="Amiran Ramishvili">
+    <meta property="project-url" content="https://github.com/darkmark1991/doomsday-calculator">
 
 
     <!-- Bootstrap CSS -->
