--- a/index.html
+++ b/index.html
@@ -279,12 +279,13 @@
             </div>
 
             <div id="result" class="mt-3 collapse card card-body">
+                <p id="dateInConsideration" class="hide"></p>
                 <p id="centuryDoomsday" class="hide"></p>
                 <p id="yearNum" class="hide"></p>
-                <p id="calculateYear" class="hide"></p>
-                <p id="yearDoomsday" class="hide"></p>
+                <p id="calculateYear" class="ml-3 hide"></p>
+                <p id="yearDoomsday" class="ml-3 hide"></p>
                 <p id="closestDoomsday" class="hide"></p>
-                <p id="dayOfTheWeek" class="hide"></p>
+                <p id="dayOfTheWeek" class="ml-3 hide"></p>
                 <p class="font-weight-bold" id="conclusion" class="hide"></p>
                 <p class="font-weight-bold text-danger hide mb-0" id="error"></p>
             </div>
