--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <div class="lang-ge mt-3">
                 3. მოგვიწევს შემდეგი დღეების დამახსოვრება, თანაც კონოვეის "9-5 at 7-11" მნემონიკის გარეშე,
                 რომელიც ქართული რეალობისთვის არაა რელევანტური.
-                <table class="table table-bordered text-center">
+                <table class="table table-bordered table-light text-center">
                     <thead>
                       <tr>
                         <th>იან</th>
@@ -227,7 +227,7 @@
             <div class="lang-en mt-3">
                 3. We need to remember these dates. Conway used "9-to-5 at 7-11" mnemonic for 9/5, 5/9, 7/11 and 11/7.
                 Last day of February is always a Doomsday, and we use it for March as well (0/3).
-                <table class="table table-bordered text-center">
+                <table class="table table-bordered table-light text-center">
                     <thead>
                       <tr>
                         <th>Jan</th>
