--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     ვინაიდან 7 დღეში კვირის დღეების ათვლა ახლიდან იწყება, საქმის უფრო გასამარტივებლად შეგვიძლია სასურველი რიცხვს გამოვაკლოთ განკითხვის დღე,
                     გავყოთ 7-ზე და მიღებული ნაშთი ავითვალოთ.
                 </p>
-                <small class="form-text text-muted">მაგ. 15 აპრილისთვის გამოვთვლით (15 - 4) / 7 = 2 + 1 და განკითხვის დღიდან მხოლოდ 1 დღის ათვლა მოგვიწევს</small>
+                <small class="form-text text-muted">მაგ. 15 აპრილისთვის გამოვთვლით (15 - 4) მოდული 7 = 1 და განკითხვის დღიდან მხოლოდ 1 დღის ათვლა მოგვიწევს</small>
                 <p class="mt-4">სავარჯიშოდ შეგიძლიათ ქვემოთ მოცემული კალკულატორი გამოიყენოთ.</p>
             </div>
 
