--- a/index.html
+++ b/index.html
@@ -281,7 +281,10 @@
             <div id="result" class="mt-3 collapse card card-body">
                 <p>
 			<span id="dateInConsideration" class="hide"></span>
-			<a href="#details" data-toggle="collapse"><span class="lang-en">Details</span><span class="lang-ge">დეტალები</span></a>
+			<a href="#details" data-toggle="collapse">
+				<span class="lang-en">Solution</span>
+				<span class="lang-ge">ამოხსნა</span>
+			</a>
 		</p>
 		<section id="details" class="collapse">
                 	<p id="centuryDoomsday" class="hide"></p>
@@ -306,3 +309,4 @@
     <script src="assets/script.js"></script>
   </body>
 </html>
+
